# HxtWheelz-Physix

./: CMakeLists.txt  README.md  camera.cpp  camera.hpp  main.cpp  vector3.hpp
include/PhysicsUtils/: camera.hpp  matrix4.hpp  render.hpp  vector3.hpp
include/PhysicsUtils/Objects/: cuboid.hpp
include/glad/: glad.h
include/shaders/: vertex_shader.glsl
src/: camera.cpp  cuboid.cpp  glad.c  main.cpp
